--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Optimization Notes</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- 引入 Docsify 和 MathJax -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Docsify 配置 -->
   <script>
     window.$docsify = {
       loadSidebar: true,
@@ -15,10 +15,14 @@
       }
     };
   </script>
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css">
+  <!-- 引入 Docsify -->
+  <script src="https://cdn.staticfile.org/docsify/4.12.3/docsify.min.js"></script>
+  <!-- 引入 Docsify KaTeX 插件 -->
+  <script src="https://cdn.staticfile.org/docsify-katex/1.6.0/docsify-katex.min.js"></script>
+  <!-- 主题样式 -->
+  <link rel="stylesheet" href="https://cdn.staticfile.org/docsify/4.12.3/themes/vue.css" />
+  <!-- KaTeX 样式 -->
+  <link rel="stylesheet" href="https://cdn.staticfile.org/katex/0.13.11/katex.min.css" />
 </head>
 <body>
   <div id="app">Loading...</div>
