--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Docsify 配置 -->
   <script>
     window.$docsify = {
-      loadSidebar: false,
+      loadSidebar: true,
       loadNavbar: true,
       subMaxLevel: 2,
       alias: {
