--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>Optimization Notes</title>
+  <title>Docsify Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Docsify 配置 -->
   <script>
     window.$docsify = {
       loadSidebar: true,
-      loadNavbar: true,
-      subMaxLevel: 2,
-      alias: {
-        '/.*/_sidebar.md': '/_sidebar.md'
-      }
+      subMaxLevel: 2
     };
   </script>
-  <!-- 引入 Docsify -->
-  <script src="https://cdn.staticfile.org/docsify/4.12.3/docsify.min.js"></script>
-  <!-- 引入 Docsify KaTeX 插件 -->
-  <script src="https://cdn.staticfile.org/docsify-katex/1.6.0/docsify-katex.min.js"></script>
-  <!-- 主题样式 -->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/docsify/4.12.3/themes/vue.css" />
-  <!-- KaTeX 样式 -->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/katex/0.13.11/katex.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify/themes/vue.css" />
+  <script src="https://cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 </head>
 <body>
-  <div id="app">Loading...</div>
+  <div id="app">加载中...</div>
 </body>
 </html>
