--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
-  <title>Docsify Test</title>
+  <title>Optimization Notes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script>
     window.$docsify = {
