添加网页图标

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Optimisation</title>
+  <link rel="icon" href="./images/icon.jpg" type="image/jpeg">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
   <style>/* 正文字体放大 */  body {font-size: 20px; /* 默认是14px，建议16-18px */}
             /* 代码块字体放大 */  pre, code {font-size: 14px !important;}
@@ -21,6 +22,8 @@
   <!-- 加载 MathJax -->
   <script src="//cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
+
+
 <body>
   <div id="app">加载中...</div>
 
