--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       name: 'lucienrua',
       repo: 'https://github.com/lucienclinton/optimisation',
       loadSidebar: true,
+      subMaxLevel: 4
       markdown: {
         renderer: {
           code: function(code, lang) {
