--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       name: 'lucienrua',
       repo: 'https://github.com/lucienclinton/optimisation',
       loadSidebar: true,
-      // subMaxLevel: 4,
+      subMaxLevel: 2,
       markdown: {
         renderer: {
           code: function(code, lang) {
