--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
   <!-- Docsify 配置 -->
   <script>
     window.$docsify = {
-
       name: 'lucienrua',
       repo: 'https://github.com/lucienclinton/optimisation',
+      lazyLoadImages: true
       loadSidebar: true,
       subMaxLevel: 2,
       markdown: {
