--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     window.$docsify = {
       name: 'lucienrua',
       repo: 'https://github.com/lucienclinton/optimisation',
-      lazyLoadImages: true
+      lazyLoadImages: true,
       loadSidebar: true,
       subMaxLevel: 2,
       markdown: {
