--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       lazyLoadImages: true,
       loadSidebar: true,
       subMaxLevel: 2,
+      basePath: '/optimisation/',
       markdown: {
         renderer: {
           code: function(code, lang) {
