--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       lazyLoadImages: true,
       loadSidebar: true,
       subMaxLevel: 2,
-      basePath: '/optimisation/',
+      relativePath: true,
       markdown: {
         renderer: {
           code: function(code, lang) {
@@ -66,6 +66,7 @@
 
   <!-- 加载 Docsify 和 Mermaid -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-relative-path/dist/docsify-relative-path.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 </body>
 </html>
