--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       lazyLoadImages: true,
       loadSidebar: true,
       subMaxLevel: 2,
+      basePath: '/optimisation/', 
       relativePath: true,
       markdown: {
         renderer: {
