网页图片相对路径还是没解决下来

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       lazyLoadImages: true,
       loadSidebar: true,
       subMaxLevel: 2,
-      basePath: '/optimisation/',
+      // basePath: '/optimisation/',
       relativePath: true,
       markdown: {
         renderer: {
@@ -67,7 +67,6 @@
 
   <!-- 加载 Docsify 和 Mermaid -->
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-relative-path/dist/docsify-relative-path.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 </body>
 </html>
