更新导航栏跳转

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     lazyLoadImages: true,  // 图片懒加载，提高性能
     loadSidebar: true,     // 加载侧边栏
     subMaxLevel: 2,        // 侧边栏子标题最大显示层级
-    relativePath: true,    // 允许相对路径解析，方便图片等资源引用
+    relativePath: false,    // 允许相对路径解析，方便图片等资源引用
     markdown: {
       renderer: {
         // 自定义代码块渲染，如果是mermaid绘图，则用mermaid渲染
